# xmms2-mpris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create-deb-archive.sh  update-ppa.sh
src/: art.c  art.h  mpris.c  mpris.h  mpris2-player.xml  mpris2.xml  track-info.h  uri.c  uri.h  xmms2-mpris.c  xmms2.c  xmms2.h
